# smart-router

./: .gitignore  LICENSE  README.md  pyproject.toml
plugins/smart_router/: __init__.py  plugin.yaml
smart_router/: __init__.py  classifier.py  cli.py  features.py  stats.py  tiers.py
tests/: test_classifier.py
